# combustible_bayes

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: 01_intro_normal_example.ipynb  02_logistic_regression.ipynb  03_divorce_example.ipynb  correlated_latent.ipynb  hierarchy.ipynb  linear_regression.ipynb  single_variable_latent.ipynb
